tests/baselines/reference/parserForInStatement8.errors.txt
parserForInStatement8.ts(3,10): error TS2461: Type 'string' is not an array type.
parserForInStatement8.ts(4,11): error TS2339: Property 'x' does not exist on type 'String'.


==== parserForInStatement8.ts (2 errors) ====
    // repro from https://github.com/microsoft/TypeScript/issues/54769
    
    for (let [x = 'a' in {}] in { '': 0 }) console.log(x)
             ~~~~~~~~~~~~~~~
!!! error TS2461: Type 'string' is not an array type.
    for (let {x = 'a' in {}} in { '': 0 }) console.log(x)
              ~
!!! error TS2339: Property 'x' does not exist on type 'String'.
    